# system-monitor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: make.yml
googletest/googletest/include/gtest/: gtest.h
googletest/googletest/src/: gtest.cc
include/: format.h  linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  process.cpp  processor.cpp  system.cpp
test/: CMakeLists.txt  format.test.cpp  format_test.cpp  format_time.test.cpp  linux_parser.test.cpp  memUtilization.test.cpp
test/linux_parser_tests/: memUtilization.test.cpp
test/proc/: meminfo  passwd  stat  uptime
test/proc/1/: stat  status
test/proc/10/: stat  status
test/proc/103/: stat
test/testkit/: tester.hpp
